# regdumpy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci-release.yml
Anforderungen/: R00003-Wartung-2026-04-03.md
docs/requirements/: r0001-console-application and parameters.md  r0002-github-build-and-automatic-release.md
src/: dumper.rs  main.rs
