[package]
name = "regdumpy"
version = "0.1.0"
edition = "2021"
authors = ["CleverCodeCravers"]
description = "Dumps the Windows Registry for diffing"
license = "MIT"
repository = "https://github.com/CleverCodeCravers/regdumpy"
keywords = ["windows", "registry", "dump", "diff"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
is_elevated = "0.1"
